[tool.poetry]
name = "lacus"
version = "1.11.1"
description = " A capturing system using playwright, as a web service."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/ail-project/Lacus"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"
capture_manager = "bin.capture_manager:main"
stop_capture_manager = "bin.stop_capture_manager:main"
scripts_controller = "bin.scripts_controller:main"

[tool.poetry.dependencies]
python = "^3.8"
redis = {version = "^5.2.0", extras = ["hiredis"]}
flask-restx = "^1.3.0"
werkzeug = "^3.0.6"
gunicorn = {version = "^23.0.0", extras = ["setproctitle"]}
lacuscore = "^1.11.3"
rich = "^13.9.4"
psutil = "^6.1.0"

# Temp entry to allow markupsafe 3+ until we get rid of python3.8

markupsafe = [
    {version = "<3", python = "<3.9"},
    {version = "^3.0.0", python = ">=3.9"}
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = [
    {version = "<8.13.0", python = "<3.9"},
    {version = "^8.18.0", python = ">=3.9"},
    {version = "^8.19.0", python = ">=3.10"}
]
mypy = "^1.13.0"
types-redis = "^4.6.0.20241004"
types-psutil = "^6.1.0.20241022"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
