[project]
name = "lacus"
version = "1.22.0"
description = " A capturing system using playwright, as a web service."
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = "^3.10"

dependencies = [
    "redis[hiredis] (>=5.0.0,<6.0.0)",
    "flask-restx (>=1.3.2)",
    "werkzeug (>=3.1.5)",
    "gunicorn[setproctitle] (>=25.0.3)",
    "lacuscore (>=1.21.2)",
    "rich (>=14.3.2)",
    "psutil (>=7.2.2)",
    "watchdog (>=6.0.0,<7.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "commented-configparser (>=3.0.0,<4.0.0)"
]

[project.urls]
repository = "https://github.com/ail-project/Lacus"

[project.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"
capture_manager = "bin.capture_manager:main"
stop_capture_manager = "bin.stop_capture_manager:main"
wireproxy_manager = "bin.wireproxy_manager:main"
scripts_controller = "bin.scripts_controller:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-redis = "^4.6.0.20241004"
types-psutil = "^7.2.2.20260130"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
