[project]
name = "lacus"
version = "1.25.0-dev"
description = " A capturing system using playwright, as a web service."
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dependencies = [
    "redis[hiredis] (>=5.0.0,<6.0.0)",
    "flask-restx (>=1.3.2)",
    "gunicorn[setproctitle] (>=26.0.0)",
    "lacuscore (>=1.24.7)",
    "rich (>=15.0.0)",
    "psutil (>=7.2.2)",
    "watchdog (>=6.0.0,<7.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "commented-configparser (>=3.0.0,<4.0.0)",
    "lookyloo-models (>=0.2.7)",
    "playwrightcapture (>=1.39.8)",
    "flask (>=3.1.3,<4.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "multidict (>=6.7.1,<7.0.0)",
    "aiohttp-jinja2 (>=1.6,<2.0)"
]

[project.urls]
repository = "https://github.com/ail-project/Lacus"

[project.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"
capture_manager = "bin.capture_manager:main"
stop_capture_manager = "bin.stop_capture_manager:main"
wireproxy_manager = "bin.wireproxy_manager:main"
scripts_controller = "bin.scripts_controller:main"
tactus = "bin.start_tactus:main"

[tool.poetry.group.dev.dependencies]
mypy = "^2.0.0"
types-redis = "^4.6.0.20241004"
types-psutil = "^7.2.2.20260508"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
